# OSMP-Service

./: .gitmodules  CHANGELOG  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  Dockerfile18  README.md  conanfile.txt  conanfile_windows.txt
CMakeModules/: FetchGRPC.cmake  FetchOpenSimulationInterface.cmake
grpc_proto_files/: CoSiMaMessages.proto
grpc_proto_files/base_interface/: BaseInterface.proto
grpc_proto_files/simulation_interface/: OSMPSimulationInterface.proto  SimulationInterface.proto
include/: CMakeLists.txt  GRPCInterface.h  GRPCServer.h  OSIMessages.h  OSMP.h  OSMPInterface.h  OSMPService.h  Playback.h  Record.h  ServiceInterface.h  TimeUnits.h  Utils.h
lib/: .gitignore
src/: CMakeLists.txt  GRPCInterface.cpp  GRPCServer.cpp  OSMP.cpp  OSMPClient.cpp  OSMPInterface.cpp  OSMPService.cpp  Playback.cpp  Record.cpp  Utils.cpp
test/: CMakeLists.txt  TestResourceDirectory.h.in  tests-GRPCInterface.cpp  tests-OSMPInterface.cpp  tests-Record.cpp  tests-main.cpp
test/resources/: OSMPCNetworkProxy.fmu
